src/objects/Apttus_Approver_Role__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Agreement_Type_Name__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Agreement Type Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Approver_1_Role__c</fullName>
        <label>Approver 1 Role</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approver_2_Role__c</fullName>
        <label>Approver 2 Role</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approver_3_Role__c</fullName>
        <label>Approver 3 Role</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Apttus Approver Role</label>
</CustomObject>